--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,7 +20,7 @@
 
     				<div class="col-sm-2"><a style="color: black; text-decoration: none;" href="/"><h1 class="display-1">Altic</h1></a></div>
 
-    				<div class="col-sm-7"><p class="h3">Apprenez les tables de multiplication avec le pingouin Célestin</p></div>
+    				<div class="col-sm-7"><p class="h3">Apprenez les tables de multiplication avec le pingouin Constantin</p></div>
 
                     <div class="col-sm-1">
                     {% if profilePic != 'default' %}
