--- a/templates/altic/pupilWelcome.html.twig
+++ b/templates/altic/pupilWelcome.html.twig
@@ -46,7 +46,7 @@
 			{% for trophy,isDone in hallOfTrophy %}
 			<div class="row">
 				{% set obtention = trophy| split("d") %}
-				{% set imgTrophy = obtention[0] ~ obtention[1] %}
+				{#% set imgTrophy = obtention[0] ~ obtention[1] %#}
 				{% if isDone%}
 				<div class="col">
 					<img style="max-height: 100px; max-width: 100px;" src="{{ asset('images/pupil/characters/'~imgTrophy~'.png') }}">
