--- a/templates/altic/pupilWelcome.html.twig
+++ b/templates/altic/pupilWelcome.html.twig
@@ -91,7 +91,7 @@
 		</div>
 		<div class="col-sm-4 jumbotron"><p class="h5">Progression</p>
 		Parties jouées : {{percentArray[12]}} <br>
-		Durée totale de jeu : {{percentArray[13]}}h {{percentArray[14]}}mins <br>
+		Durée totale de jeu : {{percentArray[13]}}h {{percentArray[14]}}mins <br><br>
 		Progression Totale : {{ percentArray[0]}}%
 		<div class="progress">
 		<div class="progress-bar bg-info" role="progressbar" style="width: {{ percentArray[0] }}%" aria-valuenow="{{ percentArray[0] }}" aria-valuemin="0" aria-valuemax="100"></div>
