--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -51,7 +51,7 @@
     <a href="{{path('app_register')}}">Créer un compte</a><BR>
 </div>
 <div class="row">
-    <a href="#">Mot de passe oublié</a><BR>
+    <a href="{{ path('altic_pwdLost') }}">Mot de passe oublié</a><BR>
 </div>
 </div>
 <br>
