mise en place de la recuperation de mot de passe

--- a/templates/mail/forgotPassword.html.twig
+++ b/templates/mail/forgotPassword.html.twig
@@ -1,2 +1,2 @@
-<h3> je suis un genie </h3>
-<p> et je m'appelle {{ name }} </p>
+Pour changer votre mot de passe cliquer sur ce lien :
+<a href="{{ path('altic_changePassword', {id:id}) }}" style="color: black; font-size: 1.5em;">changer mon mot de passe !!!</a>
