--- a/templates/altic/teacherPupilData.html.twig
+++ b/templates/altic/teacherPupilData.html.twig
@@ -45,7 +45,7 @@
 				<h4>{{ pupilStats[i][1] }} entraînements sur cette table.</h4>
 			</div>
 			<div class="col text-center">
-				<a href="{{ path('altic_teacherPupilDataTable', {id: pupilStats[0][6], number: tablesOrder[i]}) }}"><button class="btn btn-info">Consulter</button></a>
+				<a href="{{ path('altic_teacherPupilDataTable', {id: pupilId, number: tablesOrder[i]}) }}"><button class="btn btn-info">Consulter</button></a>
 			</div>
 		</div>
 	</div>
