--- a/templates/altic/teacherPupilDataTable.html.twig
+++ b/templates/altic/teacherPupilDataTable.html.twig
@@ -5,7 +5,8 @@
 {% block body %}
 
 {{ parent() }}
+{{ dump(pupilData) }}
 
-Données de l'élève {{pupilName}} sur la table de {{tableNumber}}
+
 
 {% endblock %}
