maj mise en forme et traductions (non effectif)

--- a/templates/baseLogin.html.twig
+++ b/templates/baseLogin.html.twig
@@ -21,7 +21,7 @@
                         <h1 class="display-1">Altic</h1></a>
                     </div>
 
-    				<div class="col-sm-7"><p class="h3">Apprenez les tables de multiplication avec le pingouin Célestin</p></div>
+    				<div class="col-sm-7"><p class="h3">Apprenez les tables de multiplication avec le pingouin Constantin</p></div>
 
     				<div class="col-sm-1">
                             <a href="{{path('app_register')}}">Créer un compte</a>
