--- a/templates/altic/teacherPupilDataTable.html.twig
+++ b/templates/altic/teacherPupilDataTable.html.twig
@@ -16,7 +16,7 @@
 		<div class="col">
 			<div class="progress">
 				<h4>Maîtrise de la table</h4>
-				<div class="progress-bar bg-info" role="progressbar" style="width: {{ pupilStats[0][0] }}%" aria-valuenow="{{ pupilData[0][0] }}" aria-valuemin="0" aria-valuemax="100"></div>
+				<div class="progress-bar bg-info" role="progressbar" style="width: {{ pupilData[0][0] }}%" aria-valuenow="{{ pupilData[0][0] }}" aria-valuemin="0" aria-valuemax="100"></div>
 			</div>
 		</div>
 		<div class="col">
