--- a/templates/altic/teacherPupilDataTable.html.twig
+++ b/templates/altic/teacherPupilDataTable.html.twig
@@ -14,15 +14,17 @@
 	</div>
 	<div class="row">
 		<div class="col">
+			<h4>Maîtrise de la table</h4>
 			<div class="progress">
-				<h4>Maîtrise de la table</h4>
 				<div class="progress-bar bg-info" role="progressbar" style="width: {{ pupilData[0][0] }}%" aria-valuenow="{{ pupilData[0][0] }}" aria-valuemin="0" aria-valuemax="100"></div>
 			</div>
 		</div>
 		<div class="col">
 			<h3>{{ pupilData[0][1] }} entraînements</h3>
 		</div>
+	</div>
 
+	<div class="row">
 		<!--training results-->
 		{% for i in 1..pupilData|length - 1 %}
 		<div class="row">
@@ -53,8 +55,8 @@
 				</tbody>
 			</table>
 		</div>
+		<br>
 		{% endfor %}
-
 	</div>
 
 </div>
