--- a/templates/altic/teacherPupilDataTable.html.twig
+++ b/templates/altic/teacherPupilDataTable.html.twig
@@ -45,7 +45,13 @@
 				{% set part2 = multString[1]|number_format %}
 				{% set result = part1 * part2 %}
 				<tr class="table-light">
-					<td>{{ pupilData[i][1][j] }}</td>
+					<td>
+						{% if pupilData[i][1][j] == result %}
+						<p style="color: green;">{{ pupilData[i][1][j] }}</p>
+						{% else %}
+						<p style="color: red;">{{ pupilData[i][1][j] }}</p>
+						{% endif %}
+					</td>
 					<td>{{ pupilData[i][2][j] }}</td>
 					<td>
 						{% for k in pupilData[i][3][j] %}
