--- a/templates/altic/pwdLost.html.twig
+++ b/templates/altic/pwdLost.html.twig
@@ -15,7 +15,7 @@
 {% endfor %}
 
 	<div class="row">
-		<div class="col"><p style="font-family: 'roboto'; text-align: center;" class="h3">Récupération de mot de passe</p>
+		<div class="col"><p style="text-align: center;" class="h3">Mot de passe perdu</p>
 		{{ form_start(pwdLost) }}
 		{{ form_row(pwdLost.email)}}
         <button class="btn btn-lg btn-primary" type="submit">Changer mon mot de passe</button>
