--- a/templates/mail/forgotPassword.html.twig
+++ b/templates/mail/forgotPassword.html.twig
@@ -1,2 +1,4 @@
-Pour changer votre mot de passe cliquer sur ce lien :
-<a href="{{ path('altic_changePassword', {id:id}) }}" style="color: black; font-size: 1.5em;">changer mon mot de passe !!!</a>
+Vous recevez ce mail suite à la perte du mot de passe de votre compte sur Altic.
+Pour changer votre mot de passe, cliquez sur le lien ci-dessous.<br><br>
+<a href="http://altic-ludique.herokuapp.com{{ path('altic_changePassword', {id:id}) }}" >Changer mon mot de passe</a><br><br>
+Si ce mail ne vous concerne pas, veuillez le supprimer.
