--- a/templates/security/changePassword.html.twig
+++ b/templates/security/changePassword.html.twig
@@ -1,6 +1,6 @@
 {% extends 'baseLogin.html.twig' %}
 
-{% block title %} changer de mot de passe {% endblock %}
+{% block title %} Altic - Mot de passe oublié {% endblock %}
 
 {% block body %}
 
@@ -8,7 +8,7 @@
 
 <div class="container">
 	<div class="row">
-		<div class="col"><p style="font-family: 'roboto'; text-align: center;" class="h3">Récupération de mot de passe</p>
+		<div class="col"><p style="font-family: 'roboto'; text-align: center;" class="h3">Mot de passe oublié</p>
 		{{ form_start(changePassword) }}
 		{{ form_row(changePassword.newPassword) }}
         <button class="btn btn-lg btn-primary" type="submit">Changer mon mot de passe</button>
