--- a/templates/altic/teacherPupilDataTable.html.twig
+++ b/templates/altic/teacherPupilDataTable.html.twig
@@ -6,6 +6,8 @@
 
 {{ parent() }}
 
+{{ dump(pupilData) }}
+{#
 <div class="container">
 
 	<div class="row text-center">
@@ -68,5 +70,5 @@
 	</div>
 
 </div>
-
+#}
 {% endblock %}
