--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -7,7 +7,7 @@
 
 <div class="container">
 <div align="center" class="embed-responsive embed-responsive-16by9">
-    <video autoplay loop class="embed-responsive-item">
+    <video autoplay controls class="embed-responsive-item">
         <source src="{{ asset('video/final.mp4') }}" type="video/mp4">
     </video>
 </div>
